   * new remove_specials=<id_list> key to allow to remove specials in effect 
     tags
   * obsolete set_special= in [effect] tags
   * correct handling of UTF8 filenames under windows
   * fighting animations can now be filtered on swing number
 * multiplayer game management
   * client now tells the server if a game ended in victory or defeat 

Version 1.1.7:
 * campaigns
   * Heir to the Throne
     * added 2 mermen to Bay of Pearls on hard
     * lowered turn limits on Scepter of Fire to something sane
 * language and i18n:
    * updated translations: French, German, Portuguese (Brazil), Spanish,
      Swedish
 * multiplayer maps:
    * revised multiplayer maps: Amohsad Caldera
 * units
    * balancing changes:
      * removed White Mage and Mage of Light from random_leader
      * removed special defense values from the Merman Hoplite
      * decreased the melee attack of the Merman Javelineer from 8-3 to 8-2
      * increased the melee attack of the Merman Entangler from 7-3 to 8-3
      * increased the ranged attack of the Merman Entangler from 7-3 to 8-3
      * increased the melee attack of the Necrophage from 6-3 to 7-3
      * decreased the XP requirement of the Necrophage from 66 to 40
 * music & sound
   * new or improved sounds: lich hit & die, bite, tail
 * graphics
   * new village flag animation
   * some units and animations updated for team color support
 * fixed bug that caused the game to freeze when a leader takes part in a
   fight

Version 1.1.6:
 * campaigns
   * Heir to the Throne
     * added a secret, powerful item to one of the later scenarios
     * ensured minimum gold of 500 to start campaign climax scenarios (after 
       Elven Council)
     * expanded list of units that can obtain the Fire Sword
     * added an option dialog to let you choose who gets the Fire Sword
   * The Rise of Wesnoth
     * fixed missing objectives for Cursed Isle
   * The South Guard
     * fixed Naga position in Hard mode for Tidings Good And Ill