@@ -30,7 +30,9 @@ Version 1.3-svn:
    * fighting animations can now be filtered on swing number
  * multiplayer game management
    * client now tells the server if a game ended in victory or defeat 
-
+ * multiplayer scenarios
+   * scenarios can set faction, recruit, leader, and some other initial settings previously ignored in multiplayer
+	
 Version 1.1.7:
  * campaigns
    * Heir to the Throne
